# tetris-asm0

./: CMakeLists.txt  readme.md
3rd_party_libs/: build_mxnet.sh  build_ncnn.sh  build_onnx-runtime_default_cpu.sh  build_openvino.sh
src/: inferenceManager.cpp  inferenceManager.h  main.cpp
src/inference/: inferenceEngineTemplate.h  mxnetInferEng.cpp  mxnetInferEng.h  ncnnInferEng.cpp  ncnnInferEng.h  onnxRuntimeDefaultInferEng.cpp  onnxRuntimeDefaultInferEng.h  openvinoInferEng.cpp  openvinoInferEng.h
src/inference/openvino/: common.hpp
src/util/: util.cpp  util.h
